public/stylesheets/style.css
body {
  padding: 50px;
  font-family:Georgia, 'Times New Roman', Times, serif;
  font-size: 14px; 
  color: #181818;
}

.header {
  text-decoration: underline;
  font-weight: bold;
  text-transform: uppercase;
  font-family: Arial, Helvetica, sans-serif;

}

#wrapper {
  border: 1px solid black; 
  border-radius: 10px;
  padding: 9px; 
  min-height: 700px; 
  border-top: none;
  border-top-right-radius: 0;
  border-top-left-radius: 0; 
  padding-top: 0;
  margin-top: 0; 

}

.italic {
  font-style: italic;
  
}

.bold {
  text-decoration: bold;
}

#grid {
  display: grid; 
}

#pitch {
  padding: 2% 15% 2% 15%; 
}

#info {
  padding: 5px; 
}

div {
  padding-top: 5px; 
  padding-bottom: 5px; 
}

#name-grid {
  display: grid; 
  grid-template-columns: 1fr 3fr 1fr;
}

#name {
  text-align: center;
  font-family: Arial, Helvetica, sans-serif;
}

iframe {
  max-height: inherit;
}

#resume {
  background-color: tan; 
  border: 1px solid black; 
  padding: 4px; 
  border-radius: 10px; 
  text-decoration: none;
  color: #181818;
  
}

#nav {
  list-style-type: none;
  margin-bottom: 10px;
  margin-top: 0; 
  padding: 0px; 
  overflow: hidden;
  background-color: #333;
  border-radius: 10px;
  margin-bottom: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;

}

#nav > li {
  float: left;

}

#nav > li a {
  display: block;
  color: white;
  text-align: center;
  padding: 14px 16px;
  text-decoration: none;
}

/* Change the link color to #111 (black) on hover */
li a:hover {
  background-color: #111;
}

.active {
  background-color: #696969;
  
}


@media screen and (min-width: 300px) and (max-width: 650px) {
  iframe {
    transition: all 0.35s ease-in-out;
    width: 400px;
  }

}

@media screen and (min-width: 650px) and (max-width: 1000px) {
  iframe {
    transition: all 0.35s ease-in-out;
    width: 600px;
  }

}

